Fixed reconnect problem and empty slot behavior

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <tr>
           <th>AMS Slot ID</th>
           <th>Material</th>
-          <th>Remaining</th>
+          <th>Remaining (estimated)</th>
           <th>Color</td>
           <th>Serialnumber</th>
           <th>Action</th>
