Add empty slot and 3rd party spool behavior and sopport filament treatment

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
       <thead>
         <tr>
           <th>AMS Slot ID</th>
+          <th>Slot state</th>
           <th>Material</th>
           <th>Remaining (estimated)</th>
           <th>Color</th>
