Add Footer and handle support filament

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>AMS Dashboard</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="show-footer">
   <div id="menubar">
     <!-- Printer Dropdown -->
     <div class="dropdown">
@@ -56,6 +56,15 @@
       </tbody>
     </table>
   </div>
+  <footer class="footer">
+      <div class="container">
+          <div class="content">
+            2025 - v.1.0.1
+            <a href="https://github.com/Rdiger-36/bambulab-ams-spoolman-filamentstatus" target="_blank">GitHub Repository</a>.
+            Created by <a href="https://github.com/Rdiger-36" target="_blank">Rdiger-36</a>
+        </div>
+    </div>
+  </footer>
 
   <script src="frontend.js"></script>
 
