--- a/public/logs.html
+++ b/public/logs.html
@@ -6,7 +6,7 @@
     <title>Backend Logs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="hide-footer">
     <div id="menubar">
         <button id="log-button" class="log-button" onclick="window.location.href='index.html'">AMS Dashboard</button>
         <button id="dark-mode-toggle" class="dark-mode-button">
